# homeworks-service

./: .flake8  .gitignore  .pylintrc  ApiSpecification.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  asgi.py  circuit_zones.csv  config.json  develop.ps1  docker-build.ps1  docker-build.sh  docker-publish.ps1  docker-publish.sh  docker-push.bat  docker-run.bat  docker-run.ps1  docker-run.sh  keypads.csv  mkpass.bat  pom.xml  pom.xml.versionsBackup  pyproject.toml  requirements.txt  sendkey.bat  testauth.bat  users.csv
.github/workflows/: build.yml  docker-image.yml
.jpb/: jpb-settings.xml
deprecated/: Dockerfile  README.md  docker-build.bat  docker-run.bat  pom.xml.versionsBackup  setversion.bat
deprecated/.jpb/: jpb-settings.xml
deprecated/config/: homeworks.yml  users.csv
deprecated/src/main/java/com/jvj28/homeworks/: HomeworksModelMXBean.java  HomeworksProcessorMXBean.java
deprecated/src/main/resources/: application.properties
deprecated/src/test/java/com/jvj28/homeworks/: TestDataModel.java  TestDataSource.java  TestMakePasswords.java  TestService.java
deprecated/src/test/resources/: makepassword.properties
lutron_qs_exporter/: __init__.py  _version.py  app.py  config.py  database.py  logger.py  metrics.py
src/main/java/com/jvj28/homeworks/: HomeworksModel.java  HomeworksProcessor.java  HomeworksProcessorMXBean.java  ServiceMain.java
src/main/java/com/jvj28/homeworks/api/: BadRequestException.java  ControllerAdvisor.java  HelpCommandListEntry.java  HelpResponse.java  HomeworksController.java  HwApiController.java  HwApiControllerAdvice.java  HwApiControllerService.java  JwtAuthenticationController.java  NotFoundException.java  RequestTimeoutException.java  TotalUsage.java  UnauthorizedException.java
src/main/java/com/jvj28/homeworks/auth/: ApiAuthController.java  ApiAuthControllerAdvice.java  ApiAuthControllerService.java  ApiAuthRequestData.java  ApiAuthService.java  (+12 more)
src/main/resources/: application.properties
src/main/resources/public/: index.html
src/main/resources/templates/: error.html
src/test/java/com/jvj28/homeworks/: MakePasswords.java  TestBuffer.java  TestDataModel.java  TestMakePasswords.java  TestMetrics.java  TestService.java
tests/: test_database.py
(+271 files in other folders)
