[tool.poetry]
name = "lutron_qs_exporter"
version = "1.1.12"
description = "Add your project description here"
authors = ["James Barwick <jbarwick@me.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.30.0"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
hypercorn = "^0.14.3"
requests = "^2.31.0"
starlette = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
types-requests = "^2.25.4"
asgiref = "^3.4.1"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.files."lutron_qs_exporter/_version.py"]
persistent-substitution = true
initial-content = """
  \"\"\"
  This is the version informatooin for this template
  \"\"\"
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""