[tool.poetry]
name = "lutron_qs_exporter"
version = "1.1.12"
description = "Prometheus exporter for Lutron QS systems"
authors = ["James Barwick <jbarwick@me.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"
requests = "^2.31.0"
starlette = "^0.37.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
types-requests = "^2.25.4"
asgiref = "^3.4.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
poetry-plugin-export = "^1.8.0"
poetry-dynamic-versioning = "^1.3.0"

[tool.poetry-dynamic-versioning]
enable = true
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.files."lutron_qs_exporter/_version.py"]
persistent-substitution = true
initial-content = """
  \"\"\" This is the version informatooin for this template \"\"\"
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""